crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q82.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q82"
---
+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------+
| i_item_id        | i_item_desc                                                                                                                                                       | i_current_price |
+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------+
| AAAAAAAABMGDAAAA | Persiste                                                                                                                                                          | 72.60           |
| AAAAAAAADNADAAAA | Very capable services compromise in a firms. Never prime firms scrape hardly. Troops may double however. Good, red houses s                                       | 91.62           |
| AAAAAAAAEEMCAAAA | Thick, positive readers return in the explanations; police sell about perfect groups. Difficult, integrated motives would not allow here at a pubs. Ready marks b | 87.93           |
+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------+
