crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q83_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q83"
---
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
| item_id          | sr_item_qty | sr_dev | cr_item_qty | cr_dev | wr_item_qty | wr_dev | average            |
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
| AAAAAAAAAAAACAAA | 226         | 0.0    | 122         | 0.0    | 17          | 0.0    | 121.66666666666667 |
| AAAAAAAAAAABAAAA | 42          | 0.0    | 20          | 0.0    | 68          | 0.0    | 43.333333333333336 |
| AAAAAAAAAAACAAAA | 39          | 0.0    | 153         | 0.0    | 111         | 0.0    | 101.0              |
| AAAAAAAAAAACCAAA | 60          | 0.0    | 25          | 0.0    | 25          | 0.0    | 36.666666666666664 |
| AAAAAAAAAAAEAAAA | 201         | 0.0    | 23          | 0.0    | 36          | 0.0    | 86.66666666666667  |
| AAAAAAAAAAAEBAAA | 5           | 0.0    | 56          | 0.0    | 107         | 0.0    | 56.0               |
| AAAAAAAAAAAHAAAA | 82          | 0.0    | 93          | 0.0    | 75          | 0.0    | 83.33333333333333  |
| AAAAAAAAAAAHBAAA | 161         | 0.0    | 1           | 0.0    | 2           | 0.0    | 54.666666666666664 |
| AAAAAAAAAAAJBAAA | 5           | 0.0    | 57          | 0.0    | 51          | 0.0    | 37.666666666666664 |
| AAAAAAAAAAALAAAA | 27          | 0.0    | 13          | 0.0    | 36          | 0.0    | 25.333333333333332 |
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
