crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q85_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q85"
---
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
| substr(reason.r_reason_desc,Int64(1),Int64(20)) | avg(web_sales.ws_quantity) | avg(web_returns.wr_refunded_cash) | avg(web_returns.wr_fee) |
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
| Did not fit                                     | 43.25                      | 572.487500                        | 53.545000               |
| Did not like the col                            | 7.0                        | 145.260000                        | 54.520000               |
| Did not like the mak                            | 27.666666666666668         | 880.080000                        | 71.576666               |
| Did not like the mod                            | 26.333333333333332         | 122.440000                        | 54.193333               |
| Did not like the war                            | 33.8                       | 1664.306000                       | 71.206000               |
| Found a better exten                            | 25.0                       | 1130.760000                       | 28.540000               |
| Found a better price                            | 48.0                       | 2226.490000                       | 8.570000                |
| Gift exchange                                   | 11.0                       | 104.960000                        | 44.860000               |
| Lost my job                                     | 69.0                       | 1450.405000                       | 38.750000               |
| No service location                             | 27.666666666666668         | 213.243333                        | 53.670000               |
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
