crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q86_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q86"
---
+----------------+-------------+---------+--------------+--------------------+
| total_sum      | i_category  | i_class | lochierarchy | rank_within_parent |
+----------------+-------------+---------+--------------+--------------------+
| 32947144678.54 |             |         | 2            | 1                  |
| 3336550244.44  | Sports      |         | 1            | 1                  |
| 3298836012.56  | Music       |         | 1            | 2                  |
| 3293987173.20  | Children    |         | 1            | 3                  |
| 3290442246.88  | Women       |         | 1            | 4                  |
| 3289150848.93  | Electronics |         | 1            | 5                  |
| 3280577264.75  | Books       |         | 1            | 6                  |
| 3274741999.17  | Home        |         | 1            | 7                  |
| 3272454566.21  | Shoes       |         | 1            | 8                  |
| 3270946661.05  | Jewelry     |         | 1            | 9                  |
+----------------+-------------+---------+--------------+--------------------+
