crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q88_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q88"
---
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
| h8_30_to_9 | h9_to_9_30 | h9_30_to_10 | h10_to_10_30 | h10_30_to_11 | h11_to_11_30 | h11_30_to_12 | h12_to_12_30 |
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
| 199498     | 401918     | 405487      | 610317       | 606567       | 353275       | 351375       | 399751       |
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
