crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q8_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q8"
---
+--------------+--------------------------------+
| s_store_name | sum(store_sales.ss_net_profit) |
+--------------+--------------------------------+
| able         | -369013329.33                  |
| anti         | -231844265.57                  |
| ation        | -232274578.28                  |
| bar          | -131354305.51                  |
| cally        | -300318403.26                  |
| eing         | -503388231.30                  |
| ese          | -267501978.13                  |
| n st         | -67446372.42                   |
| ought        | -101628095.80                  |
| pri          | -32688585.73                   |
+--------------+--------------------------------+
