crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q92_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q92"
---
+------------------------+
| Excess Discount Amount |
+------------------------+
| 1022114.35             |
+------------------------+
