crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q94.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q94"
---
+-------------+---------------------+------------------+
| order count | total shipping cost | total net profit |
+-------------+---------------------+------------------+
| 10          | 11670.10            | 2179.34          |
+-------------+---------------------+------------------+
