crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q98_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q98"
---
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------------+-----------------+-------------+--------------+
| i_item_id        | i_item_desc                                                                                                                                                                              | i_category | i_class     | i_current_price | itemrevenue | revenueratio |
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------------+-----------------+-------------+--------------+
| AAAAAAAAAABBAAAA | Sides let essentially quite new materials. Sources must read now with the journals; sometimes financial supporters                                                                       | Men        | accessories | 5.21            | 23893.08    | 0.018727     |
| AAAAAAAAAADDCAAA | Often proposed terms can read. Prematurely early years ought to take here tiny, english police. Black                                                                                    | Men        | accessories | 3.11            | 26982.93    | 0.021148     |
| AAAAAAAAAADKBAAA | Reasons suspect further thorough numbers; mothers prevent nearly. Complex, present sums ought to ride places. For example small an                                                       | Men        | accessories | 4.96            | 50872.54    | 0.039873     |
| AAAAAAAAAADMBAAA | Central thoughts used to continue as. Over inadequate homes shall live as other con                                                                                                      | Men        | accessories | 45.35           | 66695.52    | 0.052274     |
| AAAAAAAAAAFDAAAA | Serious, respectable homes help po                                                                                                                                                       | Men        | accessories | 3.14            | 46497.36    | 0.036443     |
| AAAAAAAAAAFECAAA | Traditionally sure months burn more new remarks. Forward relationships cannot move here suddenly long-term products. Act                                                                 | Men        | accessories | 9.66            | 43971.71    | 0.034464     |
| AAAAAAAAAAHNAAAA | Here black brothers attack circumstances. Consultants cannot think no longer more democratic children. Here open                                                                         | Men        | accessories | 4.65            | 27331.92    | 0.021422     |
| AAAAAAAAAAIBCAAA | Memories allow radically apparent points. Then personal questions must get. Ago polite copies will try more gross general costs. Rather strong cri                                       | Men        | accessories | 2.43            | 71145.59    | 0.055762     |
| AAAAAAAAAAKBDAAA | Almost professional societies make very; days follow                                                                                                                                     | Men        | accessories | 1.01            | 43590.51    | 0.034165     |
| AAAAAAAAAAKPAAAA | At least sharp blues shall go correct computers; active, future conditions should not sue; dangerous eyes help ever well essential persons. As possible plants will not prepare now gran | Men        | accessories | 4.55            | 61822.62    | 0.048455     |
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------------+-----------------+-------------+--------------+
